; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_Messenger.c_send_file_control_packet.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_Messenger.c_send_file_control_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_CRYPTO_DATA_SIZE = common dso_local global i32 0, align 4
@PACKET_ID_FILE_CONTROL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @send_file_control_packet(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32* %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  %17 = alloca i64, align 8
  store i32* %0, i32** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32* %5, i32** %14, align 8
  store i32 %6, i32* %15, align 4
  %18 = load i32, i32* %15, align 4
  %19 = add nsw i32 4, %18
  %20 = load i32, i32* @MAX_CRYPTO_DATA_SIZE, align 4
  %21 = icmp ugt i32 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %7
  store i32 -1, i32* %8, align 4
  br label %50

23:                                               ; preds = %7
  %24 = load i32, i32* %15, align 4
  %25 = add nsw i32 3, %24
  %26 = zext i32 %25 to i64
  %27 = call i8* @llvm.stacksave()
  store i8* %27, i8** %16, align 8
  %28 = alloca i32, i64 %26, align 16
  store i64 %26, i64* %17, align 8
  %29 = load i32, i32* %11, align 4
  %30 = getelementptr inbounds i32, i32* %28, i64 0
  store i32 %29, i32* %30, align 16
  %31 = load i32, i32* %12, align 4
  %32 = getelementptr inbounds i32, i32* %28, i64 1
  store i32 %31, i32* %32, align 4
  %33 = load i32, i32* %13, align 4
  %34 = getelementptr inbounds i32, i32* %28, i64 2
  store i32 %33, i32* %34, align 8
  %35 = load i32, i32* %15, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %42

37:                                               ; preds = %23
  %38 = getelementptr inbounds i32, i32* %28, i64 3
  %39 = load i32*, i32** %14, align 8
  %40 = load i32, i32* %15, align 4
  %41 = call i32 @memcpy(i32* %38, i32* %39, i32 %40)
  br label %42

42:                                               ; preds = %37, %23
  %43 = load i32*, i32** %9, align 8
  %44 = load i32, i32* %10, align 4
  %45 = load i32, i32* @PACKET_ID_FILE_CONTROL, align 4
  %46 = mul nuw i64 4, %26
  %47 = trunc i64 %46 to i32
  %48 = call i32 @write_cryptpacket_id(i32* %43, i32 %44, i32 %45, i32* %28, i32 %47, i32 0)
  store i32 %48, i32* %8, align 4
  %49 = load i8*, i8** %16, align 8
  call void @llvm.stackrestore(i8* %49)
  br label %50

50:                                               ; preds = %42, %22
  %51 = load i32, i32* %8, align 4
  ret i32 %51
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #2

declare dso_local i32 @write_cryptpacket_id(i32*, i32, i32, i32*, i32, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
